--- a/_data/late_policy.yml
+++ b/_data/late_policy.yml
@@ -1,7 +1,4 @@
 policies:
+  - You can work in groups of no more than 3 students. 
+  - All labs are due in a week at the beginning of the lecture
   - Late work will not be accepted. No exception to this policy 
-  - All assignments should be submitted through the UR e-learning platform. 
-  - Submission through e-mail is not accepted. No exception to this policy
-  - All assignments are due by midnight
-  - You are advised to submit your ahead of time to account for a possible system crash or your internet going down
-  - No matter what happens (system crash, lack of internet), any unsubmitted work will receive a zero. No exception to this policy. 
