change date format

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ excerpt_separator: "<!--more-->"
 include: ['_images', '_css']
 exclude: ['develop']
 
-dateformat: "%m/%d/%Y"
+dateformat: "%c"
 
 future: true
 collections:
